--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Pedestrian detection project for counting and tracking objects in a "Smart City" environnement.
+Object detection project for counting and tracking people and cars in : urban public space, crossroads, etc.
 
